<resources>
    <string name="prompt">Select a city</string>
    <string name="settings_button_description">Settings</string>
    <string name="remove_button_description">Remove</string>
    <string name="app_name">Team 10 %s</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="googlemap_key">AIzaSyDCZDe3ZOc08EYo5FlHjL2nX0SRA-ExyDM</string>
    <string name="search_for_place">search for place</string>
    <string name="search_for_city">Search For City</string>
</resources>

