...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity='center'
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center">
            </Spinner>
            <ImageButton
                android:id="@+id/buttonRemoveLocation"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity='center'
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonViewWeather"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="View Weather" />
            <Button
                android:id="@+id/buttonViewMap"
...
