...
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_login"
            android:text="@string/login"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/purple_200"
            app:cornerRadius = "20dp"
...
